3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/c_range.c: don't lose golem if only consulting the spell list.
Nicolas Weeger 2007-07-05

Hopefully fix invalid player count on map. Now handled by remove_ob() and
insert_ob_in_map() directly. Also handled by leave() as the player leaves badly
the game in this case. Remove now unused leave_map() function.
 common/object.c
 include/map.h sproto.h
 server/apply.c login.c player.c server.c
Nicolas Weeger 2007-07-04

Fix bug #1735283: shining amulet of repulsion behaves strangely.
 common/object.c: remove stacking logic for blockview items, obsolete with map_layer.
Nicolas Weeger 2007-07-02

lib/help/skills, lib/Makefile.am: Add help for skills command.
Andreas Kirschbaum 2007-07-02

Documentation, no functional changes.
 include/timers.h
 server/timers.c
Nicolas Weeger 2007-07-01

Change behavior of shop mats: do not fail if the destination shop mat is
blocked. This prevents players from being trapped inside shops if the outside
shop mat has been blocked with earthwalls.
---
server/move.c: In teleport() place player on destination shop mat even if
 it is blocked.
Andreas Kirschbaum 2007-06-27

server/attack.c: don't say '(pk)' if duel, makes it easier to check for real pk.
Nicolas Weeger 2007-06-22

Party unit tests (partial).
 test/unit/server/check_c_party.c Makefile.am
Nicolas Weeger 2007-06-22

server/c_party.c: fix mistake in party removal.
Nicolas Weeger 2007-06-22

common/shstr.c: Remove C++ style comment.
include/map.h, include/player.h: Fix 'comma at end of enumerator list' warnings.
types/food/food.c: Fix missing math.h include. (Harmless but caused a warning)
Alex Schultz 2007-06-21
